--- a/index.html
+++ b/index.html
@@ -56,4 +56,21 @@
     <h5> <footer class="container-fluid bg-danger text-center" >Autoria:Itauan Souza</footer> </h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Escolha de linguagem</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Você será direcionado para um artigo sobre criação de sites.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retornar</button>
+          <a href="https://www.ev.org.br/cursos/crie-um-site-simples-usando-html-css-e-javascript" type="button" class="btn btn-success">Continuar</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </html>
