Update2 index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          Você será direcionado para um artigo sobre criação de sites.
+          Você será direcionado para um curso sobre criação de sites.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retornar</button>
